[package]
name = "aqara-agent2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
paho-mqtt = { version = "0.12", default-features = false, features = [
  "bundled",
] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
tokio-stream = "0.1"
tokio-seqpacket = "0.7"
